--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea/
+
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -7,4 +7,5 @@
 /public/bundles/
 /var/
 /vendor/
+.idea
 ###< symfony/framework-bundle ###
