--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,21 @@
+version: "3.8"
+
 services:
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
   app:
     build: .
     ports:
       - "8000:8000"
+    depends_on:
+      - redis
+    environment:
+      - REDIS_ADDR=redis:6379
+
+volumes:
+  redis-data:
