--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: "3.8"
-
 services:
   redis:
     image: redis:7-alpine
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - redis-data:/data
     ports:
       - "6379:6379"
-    volumes:
-      - redis-data:/data
-
   app:
     build: .
     ports:
@@ -16,6 +15,6 @@ services:
       - redis
     environment:
       - REDIS_ADDR=redis:6379
-
+      - GIN_MODE=release
 volumes:
   redis-data:
