--- a/redis.conf
+++ b/redis.conf
@@ -1,2 +1,13 @@
+# redis.conf — configuration légère pour un usage Docker/prod local
+
+# Persistance RDB (toutes les 15 min si 1 clé change)
 save 900 1
+
+# Réduction du bruit de logs
 loglevel notice
+
+# Limite mémoire (ex : 128 Mo)
+maxmemory 128mb
+
+# Politique d'éviction si mémoire dépassée
+maxmemory-policy allkeys-lru
