--- a/redis.conf
+++ b/redis.conf
@@ -1,13 +1,13 @@
-# redis.conf — configuration légère pour un usage Docker/prod local
+# redis.conf — lightweight configuration for Docker/local production use
 
-# Persistance RDB (toutes les 15 min si 1 clé change)
+# RDB persistence (save every 15 minutes if at least 1 key changed)
 save 900 1
 
-# Réduction du bruit de logs
+# Reduce log verbosity
 loglevel notice
 
-# Limite mémoire (ex : 128 Mo)
+# Memory limit
 maxmemory 128mb
 
-# Politique d'éviction si mémoire dépassée
+# Eviction policy when memory is full
 maxmemory-policy allkeys-lru
