--- a/redis.conf
+++ b/redis.conf
@@ -10,4 +10,6 @@ loglevel notice
 maxmemory 128mb
 
 # Eviction policy when memory is full
+  # LRU = Least Recently Used
+  # allkeys = even keys without TTL can be evicted
 maxmemory-policy allkeys-lru
